Closed
Bug 267650
Opened 21 years ago
Closed 21 years ago
crash if <svg:text> is stroked and has fill='none'
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jay, Assigned: jwatt)
References
()
Details
(Keywords: crash, testcase)
Attachments
(2 files)
|
125 bytes,
image/svg+xml
|
Details | |
|
1.73 KB,
patch
|
tor
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7.3) Gecko/20041026 Firefox/1.0RC1
Build Identifier: mozilla/5.0/ (windows; U; win98; en-US; rv:1.8a5) gecko/20041031
This program has performed an illegal operation
Mozilla caused an invalid page fault in module gklayout.dll at 0167:01cf8ed8.
Registers
.....
Bytes
...
Stack Dump
...
Reproducible: Always
Steps to Reproduce:
1.load graphic in latest win version MozSVG
2.
3.
Actual Results:
application crashes
Expected Results:
graphic loads
http://www.schepers.cc/BAM/index.html also crashes, it has a link to the SVG
graphic:
<iframe src="DAS-Vectoreal-Logo.svg" height="48" width="72"
frameborder='0'>Logo: Douglas Alan Schepers, Vectoreal</iframe>
| Assignee | ||
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 1•21 years ago
|
||
Here is a reduced testcase - please make these up yourself in future Jonathan
so we can concentrate on fixing things rather than finding the problem. Thanks.
The crash will occur if stroke is set to 'rgb(0,98,162)', '#000' or 'black'.
The problems seems to occur when fill='none'.
| Assignee | ||
Updated•21 years ago
|
Assignee: general → jonathan.watt
Summary: crashes application → crash if <svg:text> is stroked and has fill='none'
| Reporter | ||
Comment 2•21 years ago
|
||
the crash is pc specific, or at least not mac, which doesnt appear to display
text generally. see another bug....
Updated•21 years ago
|
| Assignee | ||
Comment 3•21 years ago
|
||
This problem seems to be the result of copying and pasting and then forgetting
to change variable names.
| Assignee | ||
Updated•21 years ago
|
Attachment #165939 -
Flags: review?(tor)
| Assignee | ||
Comment 4•21 years ago
|
||
CC'ing you also Scooter since this is your code.
Status: NEW → ASSIGNED
Comment on attachment 165939 [details] [diff] [review]
patch
It's my fault, not Scooter's - I did the gdi+ code for gradients.
Attachment #165939 -
Flags: review?(tor) → review+
Checking in nsSVGGDIPlusGlyphGeometry.cpp;
/cvsroot/mozilla/layout/svg/renderer/src/gdiplus/nsSVGGDIPlusGlyphGeometry.cpp,v
<-- nsSVGGDIPlusGlyphGeometry.cpp
new revision: 1.7; previous revision: 1.6
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 7•17 years ago
|
||
layout/svg/crashtests/267650-1.svg
http://hg.mozilla.org/mozilla-central/rev/b0337b6287f3
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•