Bug 267650 - crash if <svg:text> is stroked and has fill='none'. Patch by jonathan.watt@strath.ac.uk, r=tor.